<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="50dp" >

        <ImageView
            android:id="@+id/image_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_left" />

        <TextView
            android:id="@+id/upgrade_main_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/image_view_1"
            android:text="@string/normal_recovery"
            android:textColor="@android:color/white"
            android:textSize="36sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal_recovery_msg_1"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dp" >

            <TextView
                android:id="@+id/text_view_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_recovery_msg_2"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_1"
                android:text="@string/normal_recovery_msg_3"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal_recovery_msg_4"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/line" />

        <RelativeLayout
            android:id="@+id/layout_delete_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/long_item_selector_1"
            android:focusable="true" >

            <TextView
                android:id="@+id/text_view_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_recovery_msg_5"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_2"
                android:text="@string/normal_recovery_msg_6"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/reset_switch_btn"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/setting_second_switch_close"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_background"
        android:text="@string/normal_reset"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

</LinearLayout>