<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="50dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/online_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/arrow_left" />

            <TextView
                android:id="@+id/online_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/online_image"
                android:text="@string/upgrade_online_title"
                android:textColor="@android:color/white"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/online_text_title"
                android:layout_marginLeft="18dp"
                android:text="@string/upgrade_online_hint"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/online_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_message1"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/online_progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </LinearLayout>

</LinearLayout>
