<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="300dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/net_set_main_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/arrow_left"/>
        <TextView
            android:id="@+id/ethernet_set_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/net_set_main_image"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:text="@string/ethernet_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_below="@+id/ethernet_set_main_text"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:text="@string/ethernet_title_hint"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="200dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ethernet_auto_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:text="@string/ethernet_auto"/>
        <Button
            android:id="@+id/ethernet_auto_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/ethernet_auto_close"
            android:background="@drawable/switch_close_selector"/>
        <ImageView
            android:id="@+id/ethernet_auto_switch"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:background="@drawable/setting_second_switch_close"/>
        <Button
            android:id="@+id/ethernet_auto_open"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/ethernet_auto_open"
            android:background="@drawable/switch_open_selector"/>
    </LinearLayout>
    </LinearLayout>
    <ImageView
         android:layout_width="800dp"
         android:layout_height="wrap_content"
         android:focusable="false"
         android:scaleType="fitXY"
         android:src="@drawable/line"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp" >
     <RelativeLayout
        android:id="@+id/ethernet_set_address"
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/input_edit_selector">
     <TextView
         android:id="@+id/ethernet_set_address_text"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_marginLeft="40dp"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:text="@string/ethernet_address"/>
     <EditText
         android:id="@+id/ethernet_set_address_edit"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_toRightOf="@+id/ethernet_set_address_text"
         android:background="@android:color/transparent"
         android:textColor="@android:color/white"
         android:singleLine="true"
         android:textSize="18sp"/>
     </RelativeLayout>
      <RelativeLayout
        android:id="@+id/ethernet_set_mask"
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_below="@+id/ethernet_set_address"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/input_edit_selector" >
     <TextView
         android:id="@+id/ethernet_set_mask_text"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_marginLeft="40dp"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:text="@string/ethernet_netmask"/>
     <EditText
         android:id="@+id/ethernet_set_mask_edit"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_toRightOf="@+id/ethernet_set_mask_text"
         android:background="@android:color/transparent"
         android:textColor="@android:color/white"
         android:singleLine="true"
         android:textSize="18sp"/>
     </RelativeLayout>
      <RelativeLayout
        android:id="@+id/ethernet_set_gateway"
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_below="@+id/ethernet_set_mask"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/input_edit_selector" >
     <TextView
         android:id="@+id/ethernet_set_gateway_text"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_marginLeft="40dp"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:text="@string/ethernet_gateway"/>
     <EditText
         android:id="@+id/ethernet_set_gateway_edit"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_toRightOf="@+id/ethernet_set_gateway_text"
         android:background="@android:color/transparent"
         android:textColor="@android:color/white"
         android:singleLine="true"
         android:textSize="18sp"/>
     </RelativeLayout>
     <RelativeLayout
        android:id="@+id/ethernet_set_DNS"
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_below="@+id/ethernet_set_gateway"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/input_edit_selector" >
     <TextView
         android:id="@+id/ethernet_set_dns_text"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_marginLeft="40dp"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:text="@string/ethernet_dns"/>
     <EditText
         android:id="@+id/ethernet_set_dns_edit"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_toRightOf="@+id/ethernet_set_dns_text"
         android:background="@android:color/transparent"
         android:textColor="@android:color/white"
         android:singleLine="true"
         android:textSize="18sp"/>
     </RelativeLayout>
     <Button
         android:id="@+id/ethernet_set_commit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ethernet_set_DNS"
         android:textColor="@android:color/white"
         android:layout_centerHorizontal="true"
         android:text="@string/ethernet_commit"
         android:textSize="20sp"
         android:background="@drawable/normal_button_selector"/>
    </RelativeLayout>
</LinearLayout>
