<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="50dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/local_upgrade_main_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/arrow_left" />

            <TextView
                android:id="@+id/local_upgrade_main_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/local_upgrade_main_image"
                android:text="@string/upgrade_local_title"
                android:textColor="@android:color/white"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/local_upgrade_main_text1"
                android:layout_marginLeft="18dp"
                android:text="@string/upgrade_local_hint"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/local_upgrade_local_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/upgrade_message1"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>
